2002-09-05  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py, src/cmdline.py: Introduced the -f command-line
	option.

	* man/: Also updated the description of the graphic[sx] modules.

	* all: Made one class out of Environment, Process and Parser. The
	message writers are now created by the interfaces (as it should
	always have been).

2002-09-04  Emmanuel Beffara  <manu@beffara.org>

	* ChangeLog: introduced the change log (thanks to cvs2cl :-)

2002-09-02  Emmanuel Beffara <manu@beffara.org>

	* README, TODO, configure, man/.cvsignore: Introduced TODO. Some
	updates.

	* setup.py: Added installation of rubber-info's man pages.

	* src/graphics/mpost.py: Added dependency analysis for Metapost
	sources.

	* src/modules/vt100.py: Introduced experimental VT100 coloring
	module.

	* debian/control: Fixed building dependencies for Debian.

	* src/__init__.py, modules/: Fixed file name computation so that
	compiling a document from another directory works.

2002-08-21  Emmanuel Beffara <manu@beffara.org>

	* src/util.py, src/modules/bibtex.py: Small bugfix in DependLeaf.

2002-08-03  Emmanuel Beffara <manu@beffara.org>

	* src/graphics/mpost.py: Fixed a small bug in MetaPost support.

2002-07-16  Emmanuel Beffara <manu@beffara.org>

	* README: Kudos to Mr Jeandel!

	* src/util.py: Now (but temporarily) fails when a leaf dependency
	doesn't exist.

	* src/__init__.py: Included starred macros in the parser.

2002-06-21  Emmanuel Beffara <manu@beffara.org>

	* Version 0.99.1 released.

	* Makefile.in, setup.py, man/: Synchronized version numbers in the
	man pages and the program.

	* setup.py, src/graphics/, src/modules/graphics.py: Introduced
	modular graphics support.

	* src/__init__.py, src/util.py, src/modules/bibtex.py: Introduced
	classes to represent dependency graphs.

	* man/en/rubber-info.1.pg, man/fr/rubber-info.1.pg: Added man
	pages for rubber-info.

2002-06-13  Emmanuel Beffara <manu@beffara.org>
