@@ -1,3 +1,9 @@
+2002-09-06  Emmanuel Beffara  <manu@beffara.org>
+
+	* src/__init__.py (LogCheck.update_file): Fixed a bug that might
+	happen in file-name tracking due to unbalanced parentheses in the
+	log.
+
 2002-09-05  Emmanuel Beffara  <manu@beffara.org>
 
 	* src/__init__.py, src/cmdline.py: Introduced the -f command-line
